# CppGTestTemplate

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
test/: CMakeLists.txt  mainTest.cc
